--- a/style.css
+++ b/style.css
@@ -506,7 +506,7 @@ footer .line-footer p a {
 
     /* certificados */
     section.certificados {
-        padding: 80px 8%;
+        padding: 100%;
     }
 
     .navigation{
@@ -515,7 +515,7 @@ footer .line-footer p a {
 
     /* PORTFÓLIO */
     section.portfolio {
-        padding: 80px 8%;
+        padding: 100%;
     }
 
     .img-port {
