--- a/style.css
+++ b/style.css
@@ -160,7 +160,8 @@ section.topo-do-site .flex {
 /* ESTILO DOS PROJETOS */
 section.especiliadades {
     padding: 40px 4%;
-    box-shadow: 0 0 50px 10px #ffffff1d;
+    box-shadow: 0 0 100% 10px #ffffff1d;
+    display: flex;
 }
 
 section.especiliadades .flex {
