--- a/style.css
+++ b/style.css
@@ -469,7 +469,7 @@ footer .line-footer p a {
     /* CABEÇALHO */
     .menu-desktop,
     .btn-contato {
-        display: none;
+    display: none;
     }
 
     /* TOPO DO SITE */
@@ -508,6 +508,7 @@ footer .line-footer p a {
     /* certificados */
     section.certificados {
         padding: 100%;
+        display:flex;
     }
 
     .navigation{
