--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ section.topo-do-site .flex {
 /* ESTILO DOS PROJETOS */
 section.especiliadades {
     padding: 40px 4%;
-    box-shadow: 0 0 100% 10px #ffffff1d;
+    box-shadow: 0 0 40% 10px #ffffff1d;
     display: flex;
 }
 
@@ -507,7 +507,7 @@ footer .line-footer p a {
 
     /* certificados */
     section.certificados {
-        padding: 100%;
+        padding: 40px 8%;
         display:flex;
     }
 
@@ -517,7 +517,7 @@ footer .line-footer p a {
 
     /* PORTFÓLIO */
     section.portfolio {
-        padding: 100%;
+        padding: 40px 8%;
     }
 
     .img-port {
