--- a/style.css
+++ b/style.css
@@ -506,7 +506,7 @@ footer .line-footer p a {
         left: 0;
     }
     .content{
-        width: auto;
+        width: 95%;
     }
 
     /* PORTFÓLIO */
