--- a/style.css
+++ b/style.css
@@ -506,8 +506,10 @@ footer .line-footer p a {
     .navigation{
         left: 0;
     }
-    .slide img{
-       max-width:100%;
+
+        /* ESPECIALIDADES */
+    section.especiliadades {
+        padding: 40px 8%;
     }
 
 
