--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background: linear-gradient(200deg, #000000, #470433fb);
     height: 100%;
     background-size: 120% 120%;
-    width: 100%;
+    width: auto;
     overflow-x: hidden;
 }
 
