--- a/style.css
+++ b/style.css
@@ -548,3 +548,14 @@ footer .line-footer p a {
         text-align: center;
     }
 }
+@media(max-width: 1280px){
+    
+.menu-desktop,
+.btn-contato {
+
+    padding: 30px;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 0;
+    gap: 30px;
+}
