--- a/style.css
+++ b/style.css
@@ -541,7 +541,7 @@ footer .line-footer p a {
 
     .img-port {
         max-width: 350px;
-        margin: 0 auto;
+        margin: 0 0;
     }
     
     section.portfolio .flex {
@@ -562,7 +562,7 @@ footer .line-footer p a {
 
 header nav.menu-desktop ul li {
     display: inline-block;
-    padding: 0 8px;
+    padding: 0 0px;
     font-size: 13px;
     }
 }
