--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ form .btn-enviar input:hover {
 
 /* ESTILO DO CABEÇALHO */
 header {
-    padding: 1em;
+    padding: 40px 0;
 }
 
 header>.interface {
@@ -74,7 +74,7 @@ header nav.menu-desktop ul li {
 
 /* ESTILO DO TOPO DO SITE */
 section.topo-do-site {
-    padding: 1em;
+    padding: 40px 0;
 }
 
 section.topo-do-site .flex {
@@ -159,7 +159,7 @@ section.topo-do-site .flex {
 
 /* ESTILO DOS PROJETOS */
 section.especiliadades {
-    padding: 1em;
+    padding: 40px 0;
     
 }
 
@@ -308,7 +308,7 @@ img {
 
 /* ESTILO DO CERTIFICADOS */
 section.certificados {
-    padding: 1em;
+    padding: 40px 0;
     
 }
 .certificados .interface h1 {
@@ -387,7 +387,7 @@ input{
 
 /* ESTILO DO CURRICULO */
 section.curriculo {
-    padding: 1em;
+    padding: 40px 0;
     
 }
 
@@ -433,7 +433,7 @@ footer .flex {
 }
 
 footer .line-footer {
-    padding: 20px 0;
+    padding: 40px 0;
 }
 
 .borda {
@@ -521,6 +521,7 @@ footer .line-footer p a {
     /* certificados */
     section.certificados {
         padding: 80px 8%;
+        gap: 25px
     }
 
     .navigation{
