--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
     background-size: 120% 120%;
     width: 100%;
     overflow-x: hidden;
+    margin-left:0;
+    margin-right:0;
 }
 
 .interface {
@@ -500,6 +502,7 @@ footer .line-footer p a {
     }
     .logo img{
         width: 70%;
+        margin: 10px;
     }
 
     .topo-do-site .img-topo-site img {
