--- a/style.css
+++ b/style.css
@@ -564,7 +564,7 @@ footer .line-footer p a {
 }
 @media(max-width: 467px){
 
-header nav.menu-desktop ul li {
+    .menu-desktop ul li {
     display: inline-block;
     padding: 0 10px;
     font-size: 13px;
