--- a/style.css
+++ b/style.css
@@ -524,6 +524,7 @@ footer .line-footer p a {
     /* certificados */
     section.certificados {
         padding: 80px 8%;
+        margin: 15px;
     }
 
     .navigation{
@@ -548,9 +549,6 @@ footer .line-footer p a {
         margin: 0 auto;
     }
     
-    section.curriculo .flex {
-       gap: 60px;
-    }
 
     /* RODAPÉ */
     footer .flex {
