--- a/style.css
+++ b/style.css
@@ -507,7 +507,7 @@ footer .line-footer p a {
     }
 
     .topo-do-site .img-topo-site img {
-        width: auto;
+        width: 100%;
         
     }
     .topo-do-site .txt-topo-site h1{
