--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ footer .line-footer p a {
     .flex {
         
         flex-direction: column;
-        padding: 80px 4%;
+        padding: 30px 4%;
         margin: 10px;
     }
 
@@ -488,20 +488,24 @@ footer .line-footer p a {
         padding: 40px 8%;
     }
 
+    .topo-do-site h1 {
+        font-size: 11px
+    }
+
     .menu-desktop a{
         display: inline-block ;
         font-size: 13px;
     }
     .menu-desktop ul li {
+        display: inline-block;
         padding:  10px;
     }
     .logo img{
         width: 70%;
-        margin: 10px;
     }
 
     .topo-do-site .img-topo-site img {
-        width: 80%;
+        width: auto;
         
     }
     .topo-do-site .txt-topo-site h1{
@@ -518,7 +522,6 @@ footer .line-footer p a {
     /* certificados */
     section.certificados {
         padding: 80px 8%;
-        margin: 15px;
     }
 
     .navigation{
@@ -534,7 +537,7 @@ footer .line-footer p a {
         max-height: 100%;
     }
     /* CURRICULO */
-    section.curriculo {
+    section.portfolio {
         padding: 80px 8%;
     }
 
@@ -543,6 +546,9 @@ footer .line-footer p a {
         margin: 0 auto;
     }
     
+    section.portfolio .flex {
+       gap: 60px;
+    }
 
     /* RODAPÉ */
     footer .flex {
@@ -552,6 +558,14 @@ footer .line-footer p a {
 
     footer .line-footer {
         text-align: center;
+    }
+}
+@media(max-width: 480px){
+
+header nav.menu-desktop ul li {
+    display: inline-block;
+    padding: 0 10px;
+    font-size: 13px;
     }
 }
 
