--- a/style.css
+++ b/style.css
@@ -564,5 +564,6 @@ header nav.menu-desktop ul li {
     display: inline-block;
     padding: 0 10px;
     font-size: 13px;
+    width:500px;
     }
 }
