--- a/style.css
+++ b/style.css
@@ -563,6 +563,10 @@ footer .line-footer p a {
     footer .line-footer {
         text-align: center;
     }
+    header nav.menu-desktop ul li {
+    display: inline-block;
+    padding: 0 10px;
+}
 
 
 }
